fixed align in secondSection

--- a/src/Components/SecondSection/SecondPage.css
+++ b/src/Components/SecondSection/SecondPage.css
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: center;
   padding: 0 0 5vw 0;
+  text-align: center;
 }
 
 .secondPageContainer span {
